...
<string name="update_button">Update</string>

<string name="delete_button">Delete</string>

<string name="add_button">Add</string>

<string name="cancel_button">Cancel</string>


<string name="add_person_button">Add Person</string>

<string name="add_event_button">Add Event</string>

...
