...
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/goto_update_event"
        android:layout_width="130dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="Update"
        android:textSize="24sp"
...
